Next Release
============

* API: Interfaces to external packages are no longer available in the top-level ``nipype`` namespace, and must be imported directly (e.g. ``from nipype.interfaces import fsl``).
* ENH: New ANTs interface: ApplyTransformsToPoints
* ENH: New FreeSurfer workflow: create_skullstripped_recon_flow()
* ENH: New data grabbing interface that works over SSH connections, SSHDataGrabber
* FIX: MRTrix tracking algorithms were ignoring mask parameters.

Release 0.9.2 (January 31, 2014)
============

* FIX: DataFinder was broken due to a typo
* FIX: Order of DataFinder outputs was not guaranteed, it's human sorted now
* ENH: New interfaces: Vnifti2Image, VtoMat

Release 0.9.1 (December 25, 2013)
============

* FIX: installation issues

Release 0.9.0 (December 20, 2013)
============

* ENH: SelectFiles: a streamlined version of DataGrabber
* ENH: new tools for defining workflows: JoinNode, synchronize and itersource
* ENH: W3C PROV support with optional RDF export built into Nipype
* ENH: Added support for Simple Linux Utility Resource Management (SLURM)
* ENH: AFNI interfaces refactor, prefix, suffix are replaced by "flexible_%s_templates"
* ENH: New SPM interfaces:
		- spm.ResliceToReference,
		- spm.DicomImport
* ENH: New AFNI interfaces:
		- afni.AFNItoNIFTI
		- afni.TCorr1D
* ENH: Several new interfaces related to Camino were added:
        - camino.SFPICOCalibData
        - camino.Conmat
        - camino.QBallMX
        - camino.LinRecon
        - camino.SFPeaks
        One outdated interface no longer part of Camino was removed:
        - camino.Conmap
* ENH: Three new mrtrix interfaces were added:
        - mrtrix.GenerateDirections
        - mrtrix.FindShPeaks
        - mrtrix.Directions2Amplitude
* ENH: New FSL interfaces:
		- fsl.PrepareFieldmap
		- fsl.TOPUP
		- fsl.ApplyTOPUP
		- fsl.Eddy
* ENH: New misc interfaces:
		- FuzzyOverlap,
		- P2PDistance
* ENH: New workflows: nipype.workflows.dmri.fsl.epi.[fieldmap_correction&topup_correction]