@@ -1,6 +1,7 @@
 Next Release
 ============
 
+* FIX: FUGUE interface was adding wrong parameter in forward warping mode.
 * API: Interfaces to external packages are no longer available in the top-level ``nipype`` namespace, and must be imported directly (e.g. ``from nipype.interfaces import fsl``).
 * ENH: New ANTs interface: ApplyTransformsToPoints
 * ENH: New FreeSurfer workflow: create_skullstripped_recon_flow()
